k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: a081004-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: a081004-app
  template:
    metadata:
      labels:
        app: a081004-app
    spec:
      containers:
        - name: a081004-app
          image: 416225317325.dkr.ecr.us-east-1.amazonaws.com/a081004-repo:latest
          imagePullPolicy: Always
